--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
         <div class="collapse navbar-collapse" id="Navbar">
           <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -37,11 +37,17 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                        <a href="#reserve-table" type="button" class="btn btn-block btn-warning btn-sm">
+                                Reserve Table
+                        </a>
                 </div>
             </div>
         </div>
@@ -53,23 +59,35 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-sm col-md flex-first">
-                <h2>Uthappizza</h2>
-                <div class="hidden-xs-down">
-                  <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail aligh-self-center" src="img/uthappizza.png" alt="uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                        <div class="hidden-xs-down">
+                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
 
 
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
+            <div class="col-sm-4 col-md-3 flex-first">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <div class="hidden-xs-down">
-                  <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                </div>
+            <div class="col-sm col-md flex-last">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <div class="hidden-xs-down">
+                            <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        </div>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail aligh-self-center" src="img/buffet.png" alt="uthappizza">
+
+                </div>                    
             </div>
         </div>
 
@@ -78,12 +96,62 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-sm col-md flex-first">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <div class="hidden-xs-down">
-                  <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
+                    <div class="media-body">
+                        <h2>Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <div class="hidden-xs-down">
+                        <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div id="reserve-table" class="row row-content">
+            <div class="col-12 col-sm-8 offset-2">
+                    <div class="card">
+                        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                        <div class="card-block">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-sm-7">
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="1"><span class="custom-control-indicator"></span><span class="custom-control-description"> 1</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="2"><span class="custom-control-indicator"></span><span class="custom-control-description"> 2</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="3"><span class="custom-control-indicator"></span><span class="custom-control-description"> 3</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="4"><span class="custom-control-indicator"></span><span class="custom-control-description"> 4</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="5"><span class="custom-control-indicator"></span><span class="custom-control-description"> 5</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="6"><span class="custom-control-indicator"></span><span class="custom-control-description"> 6</span></label>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="reservationDateTime" class="col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-sm-4">
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><span class="fa fa-calendar"></span></div>
+                                            <input type="text" class="form-control" name="reservationDate" id="reservationDate" placeholder="Date">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><span class="fa fa-clock-o"></span></div>
+                                            <input type="text" class="form-control" name="reservationTime" id="reservationTime" placeholder="TIme">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary">
+                                            Reserve
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
         </div>
     </div>
 
