--- a/index.html
+++ b/index.html
@@ -73,6 +73,68 @@
         </div>
     </div>
 
+    <div id="reservationModal" class="modal fade" role="dialog">
+            <div class="modal-dialog" role="content">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Reserve a Table</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="guests" class="col-md-3 col-form-label">Number of Guests</label>
+                                    <div class="col-sm">
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="1"><span class="custom-control-indicator"></span><span class="custom-control-description"> 1</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="2"><span class="custom-control-indicator"></span><span class="custom-control-description"> 2</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="3"><span class="custom-control-indicator"></span><span class="custom-control-description"> 3</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="4"><span class="custom-control-indicator"></span><span class="custom-control-description"> 4</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="5"><span class="custom-control-indicator"></span><span class="custom-control-description"> 5</span></label>
+                                        <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="guests" value="6"><span class="custom-control-indicator"></span><span class="custom-control-description"> 6</span></label>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="section" class="col-md-3 col-form-label">Section</label>
+                                    <div class="col-sm">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-success active">
+                                                <input type="radio" name="section" id="nonSmoking" autocomplete="off" checked> Non-Smoking
+                                            </label>
+                                            <label class="btn btn-danger">
+                                                <input type="radio" name="section" id="smoking" autocomplete="off"> Smoking
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group row">
+                                    <label for="reservationDateTime" class="col-md-3 col-form-label">Date and Time</label>
+                                    <div class="col-sm-4">
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><span class="fa fa-calendar"></span></div>
+                                            <input type="text" class="form-control" name="reservationDate" id="reservationDate" placeholder="Date">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="input-group">
+                                            <div class="input-group-addon"><span class="fa fa-clock-o"></span></div>
+                                            <input type="text" class="form-control" name="reservationTime" id="reservationTime" placeholder="TIme">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-3 col-md-10">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>         <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -84,7 +146,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                        <a href="#reserve-table" type="button" class="btn btn-block btn-warning btn-sm" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong></br>" data-placement="bottom">
+                        <a data-toggle="modal" data-target="#reservationModal" type="button" class="btn btn-block btn-warning btn-sm">
                                 Reserve Table
                         </a>
                 </div>
@@ -289,11 +351,11 @@
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/tether/dist/js/tether.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script>
+        <!-- <script>
             $(document).ready(function(){
                 $('[data-toggle="tooltip"]').tooltip();
             });
-        </script>
+        </script> -->
 </body>
 
 </html>
