--- a/index.html
+++ b/index.html
@@ -315,25 +315,7 @@
                 $('[data-toggle="tooltip"]').tooltip();
             });
         </script> -->
-        <script>
-            $(document).ready(function(){
-                $("#mycarousel").carousel({interval: 2000});
-                $("#carousel-button").click(function(){
-                    if ($("#carousel-button").children("span").hasClass("fa-pause")) {
-                        $("#mycarousel").carousel('pause');
-                        $("#carousel-button").children("span").removeClass("fa-pause");
-                        $("#carousel-button").children("span").addClass("fa-play");
-                    }
-                    else {
-                        $("#mycarousel").carousel('cycle');
-                        $("#carousel-button").children("span").removeClass("fa-play");
-                        $("#carousel-button").children("span").addClass("fa-pause");
-                    }
-
-                });
-                
-            });
-        </script>
+        <script src="js/scripts.js"></script>
 </body>
 
 </html>
